--- a/templates/leads/components/form_preference_fields.html
+++ b/templates/leads/components/form_preference_fields.html
@@ -62,7 +62,7 @@
                                     </svg>
                                     Browse & Add Hashtags
                                 </button>
-                                <button id="hashtags-close-button" type="button" class="flex w-full sm:w-auto px-2 py-1 border border-gray-200 hover:bg-gray-100 rounded-md items-center justify-center text-sm font-medium text-gray-900 dark:text-white">
+                                <button id="hashtags-close-button" type="button" class="hidden flex w-full sm:w-auto px-2 py-1 border border-gray-200 hover:bg-gray-100 rounded-md items-center justify-center text-sm font-medium text-gray-900 dark:text-white">
                                     <svg class="w-3.5 h-3.5 mr-1" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
                                         <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18 17.94 6M18 18 6.06 6" />
                                     </svg>
@@ -77,7 +77,7 @@
                             </div>
                         </div>
 
-                        <div id="search-hashtags" class="flex flex-col bg-white border border-gray-200 rounded-md p-2 space-y-2 mt-4">
+                        <div id="search-hashtags" class="hidden flex flex-col bg-white border border-gray-200 rounded-md p-2 space-y-2 mt-4">
                             <div class="p-3">
                                 <label for="input-group-search" class="sr-only">Search</label>
                                 <div class="relative">
@@ -110,14 +110,15 @@
 
                         <div id="hashtags-list" class="flex flex-wrap items-center bg-white border border-gray-200 rounded-md p-2 space-y-2 mt-4">
                             {% for hashtag in preferences.hashtags.all %}
-                            <span class="inline-flex items-center px-2 py-1 mr-2 text-sm bg-gray-100 rounded-md">
+                            <span class="inline-flex items-center px-2 py-1 mr-2 text-sm bg-gray-100 rounded-md" data-id="{{ hashtag.id }}">
                                 #{{ hashtag.name }}
-                                <button id="hashtag-remove-button" type="button" class="ml-1 inline-flex items-center">
+                                <button type="button" class="ml-1 inline-flex items-center hashtag-remove-button" data-id="{{ hashtag.id }}">
                                     <svg class="w-3 h-3" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
                                     </svg>
                                 </button>
                             </span>
+                            <input type="hidden" name="hashtags" value="{{ hashtag.id }}" id="hashtag-hidden-{{ hashtag.id }}">
                             {% endfor %}
 
                         </div>
