--- a/templates/locations/partials/custom_location_elements.html
+++ b/templates/locations/partials/custom_location_elements.html
@@ -1,9 +1,9 @@
 <div class="flex justify-between items-center mb-4">
     <div class="flex flex-col space-y-1.5">
-        <h3 class="text-2xl font-semibold leading-none tracking-tight">Custom Locations</h3>
-        <p class="text-sm text-muted-foreground">Search and manage your custom location entries.</p>
+        <h3 class="text-2xl font-semibold leading-none tracking-tight dark:text-gray-300">Custom Locations</h3>
+        <p class="text-sm text-muted-foreground dark:text-gray-200">Search and manage your custom location entries.</p>
     </div>
-    <span id="custom-locations-count" class="inline-flex items-center border border-gray-200 text-green-800 text-xs font-medium px-2.5 py-0.5 rounded-full dark:bg-green-900 dark:text-green-300">
+    <span id="custom-locations-count" class="inline-flex items-center text-green-800 text-xs font-medium px-2.5 py-0.5 rounded-full dark:bg-green-900 dark:text-green-300">
         {{ custom_locations_count }} location(s)
     </span>
 </div>
