--- a/templates/settings/partials/account.html
+++ b/templates/settings/partials/account.html
@@ -68,7 +68,7 @@
             </form>
         </div>
     </div>
-    <div class="p-4 mb-4 bg-white border border-gray-200 rounded-lg shadow-sm 2xl:col-span-2 dark:border-gray-700 sm:p-6 dark:bg-gray-800">
+    <div class="p-4 mb-4 bg-white border border-gray-200 rounded-lg shadow-sm 2xl:col-span-2 dark:border-gray-700 dark:bg-gray-900 sm:p-6 dark:bg-gray-800">
         <h3 class="mb-4 text-xl font-semibold dark:text-white">Password information</h3>
 
         <!-- Add Debug Info -->
@@ -149,7 +149,7 @@
             </div>
         </form>
     </div>
-    <div class="p-4 mb-4 bg-white border border-gray-200 rounded-lg shadow-sm dark:border-gray-700 sm:p-6 dark:bg-gray-800 xl:mb-0">
+    <div class="p-4 mb-4 bg-white border border-gray-200 rounded-lg shadow-sm dark:border-gray-700 sm:p-6 dark:bg-gray-900 xl:mb-0">
         <h3 class="text-xl font-semibold dark:text-white">Notification Preferences</h3>
         <p class="text-sm font-normal text-gray-500 dark:text-gray-400">Customize how and
             when you receive notifications.</p>
